# pick-a-zoo

./: .gitignore  .pre-commit-config.yaml  INSTALL_PLAYWRIGHT.md  README.md  justfile  pyproject.toml
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
docs/talk/: spec-kit.fdb_latexmk  spec-kit.fls  spec-kit.nav  spec-kit.synctex.gz.sum.synctex  spec-kit.tex
plan/: stories.md  tech_stack.md
plan-specs/: s1-plan.md  s1-specify.md  s2-plan.md  s2-specify.md  s3-plan.md  s3-specify.md  s4-plan.md  s4-specify.md  s5-plan.md  s5-specify.md  s6-plan.md  s6-specify.md
specs/001-launch-tui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-launch-tui/checklists/: requirements.md
specs/001-launch-tui/contracts/: feed-manager.md  tui-app.md
specs/002-add-cam-feed/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-add-cam-feed/checklists/: requirements.md
specs/002-add-cam-feed/contracts/: add-feed-screen.md  feed-discovery.md  feed-manager-extension.md
specs/003-view-saved-cams/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-view-saved-cams/checklists/: requirements.md
specs/003-view-saved-cams/contracts/: view-saved-cams-screen.md
specs/004-launch-video-window/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/004-launch-video-window/checklists/: requirements.md
specs/004-launch-video-window/contracts/: feed-manager-extension.md  video-player.md  video-window.md
specs/005-create-timelapse/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-create-timelapse/checklists/: requirements.md
src/pick_a_zoo/: __init__.py  cli.py
src/pick_a_zoo/core/: models.py  (+5 more)
tests/: __init__.py
tests/integration/: __init__.py  test_feed_discovery_integration.py  test_tui_integration.py  test_video_window_integration.py
tests/unit/: __init__.py  test_add_feed.py  test_feed_discovery.py  test_feed_manager.py  test_main_menu.py  test_timelapse_encoder.py  test_video_player.py  test_video_window.py  test_view_saved_cams.py
(+11 files in other folders)
