[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pick-a-zoo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "ffpyplayer>=4.5.3",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "m3u8>=6.0.0",
    "numpy>=2.3.5",
    "pillow>=12.0.0",
    "platformdirs>=4.5.0",
    "playwright>=1.40.0",
    "pydantic>=2.12.4",
    "pyqt6>=6.10.0",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "textual>=6.6.0",
]

[project.scripts]
pickazoo = "pick_a_zoo.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "mypy>=1.11.0",
]

[tool.hatchling.build.targets.wheel]
packages = ["src/pick_a_zoo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow-running tests",
    "smoke: Smoke tests",
    "regression: Regression tests",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "ffpyplayer.*",
    "m3u8.*",
    "yaml",
]
ignore_missing_imports = true

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/node_modules", ".venv", "venv"]
executionEnvironments = [
    { root = "src", extraPaths = ["src"] },
    { root = "tests", extraPaths = ["src"] }
]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]
